Adding multiple items in a single go

--- a/src/Product.css
+++ b/src/Product.css
@@ -32,12 +32,21 @@
   margin-top: 5px;
 }
 
-.product > button {
+.product__add {
+  width: 100px;
   background: #f0c14b;
   border: 1px solid;
   margin-top: 10px;
   border-color: #a88734 #9c7e31 #846a29;
   color: #111;
+  padding: 3px;
+  padding-right: 3px;
+  padding-left: 3px;
+}
+
+.item__count {
+  margin-left: 5px;
+  margin-right: 5px;
   padding: 3px;
 }
 
