--- a/src/CheckoutProduct.css
+++ b/src/CheckoutProduct.css
@@ -9,13 +9,14 @@
 
 }
 
-.checkout__product__info > button{
+.remove__all{
     background: #f0c14b;
     border: 1px solid;
     margin-top: 10px;
     border-color:  #a88734 #9c7e31 #846a29;
     color: #111;
-
+    padding-left: 3px;
+    padding-right: 3px;
 }
 
 .checkout__product__image {
@@ -32,4 +33,10 @@
 .checkout__product__title {
     font-size: 17px;
     font-weight: 800;
+}
+
+.item__count {
+  margin-left: 5px;
+  margin-right: 5px;
+  padding: 3px;
 }
