--- a/src/checkout/components/Subtotal.css
+++ b/src/checkout/components/Subtotal.css
@@ -1,4 +1,7 @@
 .subtotal {
+  position:fixed;
+  top:45px;
+  right: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
